--- a/PrototypeAPI (Django)/yelpapi/templates/yelpapi/yelpform.html
+++ b/PrototypeAPI (Django)/yelpapi/templates/yelpapi/yelpform.html
@@ -31,10 +31,10 @@
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
         <div class="container"><a class="navbar-brand" href="#page-top">when2Eat</a></div>
     </nav>
-    <header class="masthead" style="background-image:url({% static 'assets/img/header-bg.jpg' %});">
+    <header class="masthead" style="background-image:url({% static 'assets/img/header.jpg' %});">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in"><span>Enter a city to get restaurant information</span></div>
+                <div class="intro-lead-in"><span><font color="black">Enter a city to get restaurant information</font></span></div>
             </div>
         </div>
     </header>
@@ -76,5 +76,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src= {% static "assets/js/agency.js" %}></script>
 </body>
-
 </html>
