Added start page

--- a/when2eat/home/templates/home/index.html
+++ b/when2eat/home/templates/home/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in"></div>
-                <div class="intro-heading text-uppercase"><span>when2eat</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="#services">start now</a></div>
+                <div class="intro-heading text-uppercase"><span>when2eat</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="/start">start now</a></div>
         </div>
     </header>
     <section id="services">
