--- a/when2eat/start/templates/start/index.html
+++ b/when2eat/start/templates/start/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Untitled</title>
+    <title>start</title>
     <link rel="stylesheet" href="../../static/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../static/assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="../../static/assets/css/styles.css">
@@ -16,11 +16,13 @@
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Profile</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Create Session</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Join Session</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Dropdown </a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
+                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="true" href="#">Active Sessions&nbsp;</a>
+                        <div class="dropdown-menu show" role="menu"><a class="dropdown-item" role="presentation" href="#">First Session</a><a class="dropdown-item" role="presentation" href="#">Second Session</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
+                    </li>
+                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="true" href="#">Profile</a>
+                        <div class="dropdown-menu show" role="menu"><a class="dropdown-item" role="presentation" href="#">Profile Name</a><a class="dropdown-item" role="presentation" href="#">Log out</a><a class="dropdown-item" role="presentation" href="#">Settings</a></div>
                     </li>
                 </ul>
             </div>
@@ -29,8 +31,8 @@
     <div>
         <div class="container" style="padding: 0px;">
             <div class="row">
-                <div class="col-md-12"><img src="../../static/assets/img/abstract-list-is-empty.svg"></div>
-                <div class="col-md-12"><img src="../../static/assets/img/abstract-brainstorm.svg"></div>
+                <div class="col-md-12"><img src="../../static/assets/img/abstract-list-is-empty.svg" href="#"></div>
+                <div class="col-md-12"><img src="../../static/assets/img/abstract-brainstorm.svg" href="#"></div>
             </div>
         </div>
     </div>
