--- a/when2eat/start/templates/start/index.html
+++ b/when2eat/start/templates/start/index.html
@@ -18,11 +18,11 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Create Session</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Join Session</a></li>
-                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="true" href="#">Active Sessions&nbsp;</a>
-                        <div class="dropdown-menu show" role="menu"><a class="dropdown-item" role="presentation" href="#">First Session</a><a class="dropdown-item" role="presentation" href="#">Second Session</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Active Sessions&nbsp;</a>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Session</a><a class="dropdown-item" role="presentation" href="#">Second Session</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
                     </li>
-                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="true" href="#">Profile</a>
-                        <div class="dropdown-menu show" role="menu"><a class="dropdown-item" role="presentation" href="#">Profile Name</a><a class="dropdown-item" role="presentation" href="#">Log out</a><a class="dropdown-item" role="presentation" href="#">Settings</a></div>
+                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Profile</a>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Profile Name</a><a class="dropdown-item" role="presentation" href="#">Log out</a><a class="dropdown-item" role="presentation" href="#">Settings</a></div>
                     </li>
                 </ul>
             </div>
