--- a/when2eat/start/templates/start/index.html
+++ b/when2eat/start/templates/start/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>start</title>
-    <link rel="stylesheet" href="../../static/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../static/assets/css/Navigation-Clean.css">
-    <link rel="stylesheet" href="../../static/assets/css/styles.css">
+    <link rel="stylesheet" href= {% static "assets/bootstrap/css/bootstrap.min.css" %}>
+    <link rel="stylesheet" href= {% static "assets/css/Navigation-Clean.css" %}>
+    <link rel="stylesheet" href= {% static "assets/css/styles.css" %}>
 </head>
 
 <body>
@@ -36,8 +37,7 @@
             </div>
         </div>
     </div>
-    <script src="../../static/assets/js/jquery.min.js"></script>
-    <script src="../../static/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src= {% static "static/assets/js/jquery.min.js" %}></script>
+    <script src= {% static "static/assets/bootstrap/js/bootstrap.min.js" %}></script>
 </body>
-
 </html>
