--- a/when2eat/home/templates/home/index.html
+++ b/when2eat/home/templates/home/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url({'assets/img/this-food-looks-really-nice.jpg' %});">
+    <header class="masthead" style="background-image:url('../../static/assets/img/this-food-looks-really-nice.jpg');">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in"></div>
@@ -251,7 +251,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" style="background-image:url({% static 'assets/img/map-image.png' %});">
+    <section id="contact" style="background-image:url('../../static/assets/img/map-image.png');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
