Join and host backend

--- a/when2eat/home/templates/home/index.html
+++ b/when2eat/home/templates/home/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in"></div>
-                <div class="intro-heading text-uppercase"><span class="bg-secondary shadow-lg">when2eat</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="{% url 'social:begin' 'google-oauth2' %}?next=/start">start now</a></div>
+                <div class="intro-heading text-uppercase"><span class="bg-secondary shadow-lg">when2eat</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="{% url 'social:begin' 'google-oauth2' %}">start now</a></div>
         </div>
     </header>
     <section id="services">
